--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
    <link rel="stylesheet" href="style.css">
-
   
-   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
   </head>
 
   <body>
@@ -22,15 +21,15 @@
       <h3 class="btn btn-default heading">IMAGE RECOGNITION</h3>
       <br><br>
 
-      <p style="font-size: 22px;">Model is trained to identify the following objects: </p>
+      <p style="font-size: 22px;">Model is trained to identify the following angles: </p>
 
       <b class="name_of_objects">
-      Front Face
-      <hr>
-      Side Face
-      <hr>
-      Back Face
-      <hr>
+        Front Face
+        <hr>
+        Side Face
+        <hr>
+        Back Face
+        <hr>
       </b>
 
       <label>Webcam View - </label>
@@ -40,7 +39,7 @@
       <br><br>
       <button onclick="take_snapshot();" class="btn btn-info">Capture Image</button>
       <br><br>
-      <button onclick="check()" class="btn btn-success">Identify Image</button>
+      <button onclick="check();" class="btn btn-success">Identify Image</button>
       <br><br>
 
       <p style="font-size: 22px;">Object : <span id="result_object_name"></span> </p>
